# data-platform-dashboard

./: .gitignore  README.md
.github/workflows/: auto-tag.yml
backend/: check_db.py  check_roles_pg.py  check_schema.py  check_yaml.py  debug_status.py  pyproject.toml  test_pipeline_location.py  test_status.py
backend/app/: main.py  schemas.py
backend/app/api/v1/: auth.py  connections.py  connections_metadata.py  jobs.py  management.py  metadata.py  pipelines.py  reports.py  repositories.py  router.py  schedules.py  schemas_router.py  status.py  users.py  variables.py
backend/app/core/: auth.py  config.py  database.py  secrets.py
backend/app/services/: validator.py
backend/scripts/: audit_rbac.py  migrate_core_to_edw.py  verify_mgmt_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BlueprintInspectModal.tsx  DynamicFormRenderer.tsx  DynamicTable.tsx  GenericSchemaForm.tsx  Pagination.tsx  ProtectedRoute.tsx  ProvisioningWizard.tsx  ResourceDeleteModal.tsx  RoleGuard.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: CodeLocations.tsx  Dashboard.tsx  Login.tsx  Profile.tsx  Roles.tsx  Teams.tsx  Users.tsx  index.ts
frontend/src/pages/Blueprints/: BlueprintList.tsx
frontend/src/pages/Connections/: ConnectionList.tsx
frontend/src/pages/Jobs/: BlueprintList.tsx  JobDefinitionList.tsx
frontend/src/pages/Pipelines/: JobDefinitionModal.tsx  PipelineDetail.tsx  PipelineList.tsx
frontend/src/pages/Schemas/: SchemaList.tsx
frontend/src/services/: api.ts
(+3 files in other folders)
